--- a/client/AI.html
+++ b/client/AI.html
@@ -71,7 +71,7 @@
                                 class="contact-form">
                                 <div class="w-layout-grid contact-form-grid">
                                     <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24"><label
-                                            for="Name">question?</label><input type="text" class="text-field w-input"
+                                            for="Name">reqest</label><input type="text" class="text-field w-input"
                                             maxlength="256" name="Name" data-name="Name" placeholder="Enter your name"
                                             id="Name" /><a id="generate_btn" href="#" class="button-2 w-button">Generate</a></div>
                                 </div>
@@ -149,6 +149,7 @@
     </section>
     <script src="https://uploads-ssl.webflow.com/64040a1627be9b5a58c477d0/js/webflow.32f1d535c.js"
         type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script type="module" src="./js/ai.js"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
