--- a/client/profile.html
+++ b/client/profile.html
@@ -69,7 +69,7 @@
             </div>
             <div class="div-block-10">
                 <div class="text-block-7">Rating:</div>
-                <div class="text-block-7-copy"> 1288</div>
+                <div class="text-block-7-copy" id="raitingg"> 1288</div>
             </div>
             <div class="div-block-10">
                 <div class="text-block-7">In world:</div>
