--- a/client/test.html
+++ b/client/test.html
@@ -111,6 +111,7 @@
             </div>
         </div>
     </div>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="./js/test.js"></script>
     <script src="https://uploads-ssl.webflow.com/641e0158c48d0b0caff3886d/js/webflow.1b6d3da3d.js"
         type="text/javascript"></script>
