--- a/client/AI.html
+++ b/client/AI.html
@@ -85,20 +85,18 @@
                         </div>
                     </div>
                     <div class="text-block">Add tags</div>
-                    <div><a href="#" class="button-4 w-button"><span class="text-span">Физика</span></a><a href="#"
-                            class="button-4 w-button"><span class="text-span">Математика</span></a><a href="#"
-                            class="button-4 w-button"><span class="text-span">Информатика</span></a><a href="#"
-                            class="button-4 w-button"><span class="text-span">Геодезия</span></a></div>
-                    <div><a href="#" class="button-4 w-button"><span class="text-span">Критическое мышление</span></a><a
-                            href="#" class="button-4 w-button"><span class="text-span">География</span></a></div>
-                    <div><a href="#" class="button-4 w-button"><span class="text-span">Английский язык</span></a><a
-                            href="#" class="button-4 w-button"><span class="text-span">Основы экономики</span></a><a
-                            href="#" class="button-4 w-button"><span class="text-span">Рисование</span></a></div>
+                    <div><a href="#" class="button-4 w-button"><span class="text-span">Python</span></a><a href="#"
+                            class="button-4 w-button"><span class="text-span">C++</span></a><a href="#"
+                            class="button-4 w-button"><span class="text-span">Art</span></a><a href="#"
+                            class="button-4 w-button"><span class="text-span">Junior</span></a></div>
+                    <div><a href="#" class="button-4 w-button"><span class="text-span">Middle</span></a><a
+                            href="#" class="button-4 w-button"><span class="text-span">Senior</span></a></div>
+                    <div><a href="#" class="button-4 w-button"><span class="text-span">C#</span></a><a
+                            href="#" class="button-4 w-button"><span class="text-span">Java</span></a><a
+                            href="#" class="button-4 w-button"><span class="text-span">Ruby</span></a></div>
                     <div class="text-block">Examples</div>
-                    <div><a href="#" class="button-4 w-button"><span class="text-span">Я хочу стать
-                                строителем</span></a></div>
-                    <div class="div-block-2"><a href="#" class="button-4 w-button"><span class="text-span">Я буду
-                                криптографом</span></a></div>
+                    <div><a href="#" class="button-4 w-button"><span class="text-span">I want develop games</span></a></div>
+                    <div class="div-block-2"><a href="#" class="button-4 w-button"><span class="text-span">I want to master the design industry</span></a></div>
                     <div id="answer" class="div-block-2">
                         <h1>Answer</h1>
                         <p id="answer"></p>
